--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.29</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
